--- a/Elasticnet_regression.ipynb
+++ b/Elasticnet_regression.ipynb
@@ -2,31 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "14f84544-8d84-44e0-bd90-e44f87450d59",
-   "metadata": {},
+   "id": "d86a1d76-048f-4369-bde8-6217c1bc2254",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "Simple linear regression:\n",
-    "    The dependent varaible is dependent on a single independent feature  is called simple linear regression\n",
-    "    and when the regression is linear then it is called simple linear regression\n",
-    "    \n",
-    "    y=m*x+c\n",
-    "    \n",
-    "    \n",
+    "Elastic net regression is a linear regression technique that uses a penalty term to shrink the coefficients of the predictors. The penalty term is a combination of the l1-norm (absolute value) and the l2-norm (square) of the coefficients, weighted by a parameter called alpha.\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9312913a-6455-434d-b5e0-3d4a545ae0c5",
+   "id": "697afffe-8888-4dec-a4a7-8746e3b1c1cc",
    "metadata": {},
    "source": [
-    "Importing the essential dependencies"
+    "\n",
+    "It combines both ridge and lasso regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "399d30ab-a159-40d8-b843-c664f1070d17",
+   "execution_count": 1,
+   "id": "a117bf84-18b9-4ee4-960f-e8cdeb9574bb",
    "metadata": {
     "tags": []
    },
@@ -37,17 +35,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c965a738-b09c-4542-a3fa-20c106dd0f3a",
-   "metadata": {},
-   "source": [
-    "Getting the data and training the data using gradient descent to find the best parameter for the data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "ffb27420-6b38-4e3a-b819-8f94f0c26cf3",
+   "execution_count": 2,
+   "id": "449b940b-5ae3-4822-b921-5dc617366a1f",
    "metadata": {
     "tags": []
    },
@@ -196,7 +186,7 @@
        "4                  10.6                        27           244  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,45 +199,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "72b3c679-4d67-4122-b889-139de1f7ad27",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Defining the loss function using the Mean squared error method "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "ae017cb6-0305-471d-884f-35d760c4192f",
+   "execution_count": 8,
+   "id": "89ae2c02-1826-4709-826a-2c54f81c5ca6",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def loss(w,b,x,y):\n",
+    "def loss(x,y,w,b):\n",
     "    n=len(x)\n",
-    "    y_pred=w*x+b\n",
-    "    loss=(1/n)*sum(((y-y_pred)**2))\n",
-    "    return loss"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b4f379b6-02f5-4732-b514-751e8e86d4e5",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Defining the gradient descent function "
+    "    y_pred=x*w+b\n",
+    "    loss=(1/n)*(sum((y-y_pred)**2) + 0.1 *(w**2) + 0.1 *(abs(w)))\n",
+    "    return loss\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "cc6b6b09-f5b4-4bf9-b341-b0e2eda1fbe9",
+   "execution_count": 9,
+   "id": "39cb15c3-e4d1-403f-9f43-f7fb2a2a5087",
    "metadata": {
     "tags": []
    },
@@ -256,24 +226,25 @@
     "def gradient_descent(x,y):\n",
     "    w=0\n",
     "    b=0\n",
+    "    \n",
     "    n=len(x)\n",
-    "    for i in range(5000):\n",
-    "        y_pred=w*x+b\n",
-    "        \n",
-    "        d_w=(-2/n)*sum(x*(y-y_pred))\n",
+    "    \n",
+    "    for i in range(5001):\n",
+    "        y_pred=x*w+b\n",
+    "        d_w=(-2/n)*(sum(x*(y-y_pred))) + 0.1*2*w + 0.1\n",
     "        d_b=(-2/n)*sum(y-y_pred)\n",
     "        \n",
     "        w=w-(0.001*d_w)\n",
     "        b=b-(0.001*d_b)\n",
-    "        if(i%1000==0):\n",
-    "            print(\"The loss after %d iterations is %f\" %(i,loss(w,b,x,y)))\n",
+    "        if i%1000==0:\n",
+    "            print(\"The loss after %d iterations is %f\" %(i,loss(x,y,w,b)))\n",
     "    return w,b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "7684852b-593d-41bd-8173-b645e86e95c2",
+   "execution_count": 10,
+   "id": "af36b958-6c4c-4ad9-8897-c712bad345ca",
    "metadata": {
     "tags": []
    },
@@ -281,21 +252,13 @@
    "source": [
     "def predict(test,w,b):\n",
     "    y1=w*test+b\n",
-    "    return y1\n"
+    "    return y1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "29fc4456-363b-4a74-ae8f-88345e71a9d8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "40ef004e-d78b-4f3a-a821-c79657b2a4e1",
+   "execution_count": 11,
+   "id": "5b72ae82-3fe5-4e1f-9819-e5150d5175eb",
    "metadata": {
     "tags": []
    },
@@ -304,13 +267,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The loss after 0 iterations is 65952.986643\n",
-      "The loss after 1000 iterations is 1950.502682\n",
-      "The loss after 2000 iterations is 1514.227115\n",
-      "The loss after 3000 iterations is 1267.493995\n",
-      "The loss after 4000 iterations is 1127.955508\n",
-      "The parameter w is  45.79285721530965 The parameter b is  99.2851784116717\n",
-      "the predicted Co2 emission for engine size 3.5 is 259.560179\n"
+      "The loss after 0 iterations is 65953.169019\n",
+      "The loss after 1000 iterations is 1891.331563\n",
+      "The loss after 2000 iterations is 1439.858395\n",
+      "The loss after 3000 iterations is 1198.735526\n",
+      "The loss after 4000 iterations is 1071.632737\n",
+      "The loss after 5000 iterations is 1005.919835\n",
+      "The parameter w is  43.84194912176244 The parameter b is  105.66532256582393\n",
+      "the predicted Co2 emission for engine size 3.5 is 259.11214449199247\n"
      ]
     }
    ],
@@ -319,13 +283,21 @@
     "print(\"The parameter w is \",w1,\"The parameter b is \",b1)\n",
     "\n",
     "y_pred=predict(np.array([3.5]),w1,b1)\n",
-    "print(\"the predicted Co2 emission for engine size 3.5 is %f\"%y_pred[0])"
+    "print(\"the predicted Co2 emission for engine size 3.5 is\",y_pred[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66f10c80-8917-4941-8b5d-ce21a41a338f",
+   "id": "6a15d55f-f1b1-49e5-988f-d01a933f5e34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0c97f18-9e87-4477-8e4e-577a9f377187",
    "metadata": {},
    "outputs": [],
    "source": []
